--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
       <div id="container">
         <img src="img/logo.svg" alt="The Booleaners" id="logo">
       </div>
-      
-  </header> 
+      <h1 id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Barners-Lee</h1>
+      <p>
+        Scritto da <span id="autore">The booleaner</span><br>
+        il 10/10/2020
+      </p>      
+  </header>
+  
+  <main>
+      <img src="img/tim-1.jpg" alt="Knight Foundation">
+      <img src="img/tim-2.jpg" alt=">Tim Barners-Lee">
+  </main>
 
 </body>
 </html>
